# safeanar

./: .gitignore  CMakeLists.txt  SECURITY_AUDIT.md  main.cpp  ping_input.txt
docs/: phase1_test_cases.md  phase2_test_cases.md  phase3_test_cases.md  phase4_test_cases.md  user_guide.md  vision_document.md
include/safeanar/: anar_key.hpp  anar_status.hpp  crypto_engine.hpp  crypto_protocol.hpp  key_generator.hpp  protocol_factory.hpp  secure_delete.hpp  stream_packer.hpp
src/: anar_key.cpp  anar_key_adapter.cpp  crypto_engine.cpp  key_generator.cpp  phase2_crypto_adapter.cpp  phase3_stream_adapter.cpp  protocol_factory.cpp  secure_delete.cpp  stream_packer.cpp
tests/: README.md  phase1_runner.py  phase2_runner.py  phase3_runner.py  phase4_runner.py
tests/adapters/: anar_key_ref.py  phase2_crypto_ref.py  phase3_stream_ref.py  phase4_cli_ref.py
tests/fixtures/: test_dictionary_256.txt
tmp_phase2/: request.jsonl
